--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "@reduxjs/toolkit": "^1.7.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^7.2.1",
+    "assert": "^2.0.0",
+    "console-browserify": "^1.2.0",
+    "jest-cli": "20.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
-    "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3"
+    "react-scripts": "^2.1.3",
+    "stream-browserify": "^3.0.0",
+    "styled-components": "^5.3.3",
+    "util": "^0.12.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-console": "^0.1.0"
   }
 }
